--- a/index.html
+++ b/index.html
@@ -7,8 +7,57 @@
         <link rel="stylesheet" href="css/style.css">        
 	</head>
 	<body>
-		<section class="jumbotron">
-            <img src="images/garden-cart.png" alt="jumbotron image">
+		<section class="jumbotron col-12">
+            <div class="tint col-12"></div>            
+            <div class="jumbo-container col-12">
+                <div class="header col-10">
+                    <span class="logo">Golden</span>
+                    <div class="menu">
+                        <a href="#">HOME</a>
+                        <a href="#">SERVICES</a>
+                        <a href="#">PORTFOLIO</a>
+                        <a href="#">ABOUT</a>
+                        <a href="#">CONTACT</a>
+                    </div>
+                </div>
+                <span class="welcome col-12">Welcome To Our Studio</span>
+                <span class="nice col-12">IT'S NICE TO MEET YOU</span>
+                <span class="jumbo-button">TELL ME MORE</span>
+            </div>            
+        </section>
+        <section class="services">
+            <span class="services-h1">SERVICES</span>
+            <span class="services-h2">Proin iaculis purus consequat sem cure.</span>
+            <div class="services-row col-10">
+                <div class="services-col col-3">
+                    <div class="services-pic">
+                        <img src="icons/Icon-Basket.svg"></img>
+                    </div>
+                    <p class="title">E-Commerce</p>
+                    <span class="services-desc">Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit 
+                            aenean rhoncus posuere odio in tincidunt.</span>
+                </div>
+                <div class="services-col col-3">
+                        <div class="services-pic">
+                            <img src="icons/Icon-Laptop.svg"></img>
+                        </div>
+                        <p class="title">Responsive Web</p>
+                        <span class="services-desc">Proin iaculis purus consequat sem cure
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt.</span>
+                </div>
+                <div class="services-col col-3">
+                        <div class="services-pic">
+                            <img src="icons/Icon-Locked.svg"></img>
+                        </div>
+                        <p class="title">Web Security</p>
+                        <span class="services-desc">Proin iaculis purus consequat sem cure
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt.</span>
+                </div>
+            </div>
         </section>
 	</body>
 </html> 
+
