Section Portfolio - finished

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="services-row col-10">
                 <div class="services-col col-3">
                     <div class="services-pic">
-                        <img src="icons/Icon-Basket.svg"></img>
+                        <img src="icons/Icon-Basket.svg">
                     </div>
                     <p class="title">E-Commerce</p>
                     <span class="services-desc">Proin iaculis purus consequat sem cure
@@ -40,7 +40,7 @@
                 </div>
                 <div class="services-col col-3">
                         <div class="services-pic">
-                            <img src="icons/Icon-Laptop.svg"></img>
+                            <img src="icons/Icon-Laptop.svg">
                         </div>
                         <p class="title">Responsive Web</p>
                         <span class="services-desc">Proin iaculis purus consequat sem cure
@@ -49,13 +49,51 @@
                 </div>
                 <div class="services-col col-3">
                         <div class="services-pic">
-                            <img src="icons/Icon-Locked.svg"></img>
+                            <img src="icons/Icon-Locked.svg">
                         </div>
                         <p class="title">Web Security</p>
                         <span class="services-desc">Proin iaculis purus consequat sem cure
                                 digni ssim. Donec porttitora entum suscipit 
                                 aenean rhoncus posuere odio in tincidunt.</span>
                 </div>
+            </div>
+        </section>
+        <section class="portfolio col-12">
+            <span class="portfolio-h1">OUR PORTFOLIO</span>
+            <span class="portfolio-h2">Proin iaculis purus consequat sem cure.</span>
+            <div class="portfolio-row col-10">
+                <div class="portfolio-col">
+                    <img src="images/ebony.png" alt="Ebony & Ivory">
+                    <span class="portfolio-title">Ebony & Ivory</span>
+                    <span class="portfolio-subtitle">Branding</span>
+                </div>
+                <div class="portfolio-col">
+                    <img src="images/smart.png" alt="Smart Stationary">
+                    <span class="portfolio-title">Smart Stationary</span>
+                    <span class="portfolio-subtitle">Print Design</span>
+                </div>
+                <div class="portfolio-col">
+                    <img src="images/poster.png" alt="Clever Poster">
+                    <span class="portfolio-title">Clever Poster</span>
+                    <span class="portfolio-subtitle">Print Design</span>
+                </div>
+            </div>
+            <div class="portfolio-row col-10">                
+                <div class="portfolio-col">
+                    <img src="images/vinyl.png" alt="Vinyl Record">
+                    <span class="portfolio-title">Vinyl Record</span>
+                    <span class="portfolio-subtitle">Product Mock-Up</span>
+                </div>
+                <div class="portfolio-col">
+                    <img src="images/template.png" alt="Treehouse Template">
+                    <span class="portfolio-title">Treehouse Template</span>
+                    <span class="portfolio-subtitle">Web Design</span>
+                </div>
+                <div class="portfolio-col">
+                    <img src="images/logo.png" alt="Burned Logo">
+                    <span class="portfolio-title">Burned Logo</span>
+                    <span class="portfolio-subtitle">Branding</span>
+                </div>                
             </div>
         </section>
 	</body>
