Section About Us - finished

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="services-row col-10">
                 <div class="services-col col-3">
                     <div class="services-pic">
-                        <img src="icons/Icon-Basket.svg">
+                        <img src="icons/Icon-Basket.svg" alt="Icon basket">
                     </div>
                     <p class="title">E-Commerce</p>
                     <span class="services-desc">Proin iaculis purus consequat sem cure
@@ -40,7 +40,7 @@
                 </div>
                 <div class="services-col col-3">
                         <div class="services-pic">
-                            <img src="icons/Icon-Laptop.svg">
+                            <img src="icons/Icon-Laptop.svg" alt="Icon laptop">
                         </div>
                         <p class="title">Responsive Web</p>
                         <span class="services-desc">Proin iaculis purus consequat sem cure
@@ -49,7 +49,7 @@
                 </div>
                 <div class="services-col col-3">
                         <div class="services-pic">
-                            <img src="icons/Icon-Locked.svg">
+                            <img src="icons/Icon-Locked.svg" alt="Icon lock">
                         </div>
                         <p class="title">Web Security</p>
                         <span class="services-desc">Proin iaculis purus consequat sem cure
@@ -95,6 +95,88 @@
                     <span class="portfolio-subtitle">Branding</span>
                 </div>                
             </div>
+        </section>
+        <section class="about">
+            <span class="about-h1">ABOUT US</span>
+            <span class="about-h2">Proin iaculis purus consequat sem cure.</span>
+            <div class="about-container col-12">                
+                <div class="about-row col-12">
+                    <div class="about-desc left">
+                        <span class="desc-h1">JULY 2010</span>
+                        <span class="desc-h1">Our Humble Beginnings</span>
+                        <span class="desc-text end">Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt. Proin 
+                                iaculis purus consequat sem cure digni 
+                                ssim. Donec porttitora entum suscipit.</span>
+                    </div>
+                    <div class="about-img">
+                        <img src="images/desk.png" alt="Desk">
+                    </div>
+                </div>               
+                <div class="about-row-con col-12">
+                    <div class="connector"></div>
+                </div>
+                <div class="about-row col-12">
+                    <div class="about-img">
+                        <img src="images/waves.png" alt="Waves">
+                    </div>
+                    <div class="about-desc right">
+                        <span class="desc-h1">JANUARY 2011</span>
+                        <span class="desc-h1">Facing Startup Battles</span>
+                        <span class="desc-text">Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt. Proin 
+                                iaculis purus consequat sem cure digni 
+                                ssim. Donec porttitora entum suscipit.</span>
+                    </div>                    
+                </div>
+                <div class="about-row-con col-12">
+                    <div class="connector"></div>
+                </div>
+                <div class="about-row col-12">
+                    <div class="about-desc left">
+                        <span class="desc-h1">DECEMBER 2012</span>
+                        <span class="desc-h1">Enter The Dark Days</span>
+                        <span class="desc-text end">Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt. Proin 
+                                iaculis purus consequat sem cure digni 
+                                ssim. Donec porttitora entum suscipit.</span>
+                    </div>
+                    <div class="about-img">
+                        <img src="images/concert.png" alt="Concert">
+                    </div>
+                </div>
+                <div class="about-row-con col-12">
+                    <div class="connector"></div>
+                </div>
+                <div class="about-row col-12">
+                    <div class="about-img">
+                        <img src="images/mountains.png" alt="Mountains">
+                    </div>
+                    <div class="about-desc right">
+                        <span class="desc-h1">FEBRUARY 2014</span>
+                        <span class="desc-h1">Our Triumph</span>
+                        <span class="desc-text">Proin iaculis purus consequat sem cure 
+                                digni ssim. Donec porttitora entum suscipit 
+                                aenean rhoncus posuere odio in tincidunt. Proin 
+                                iaculis purus consequat sem cure digni 
+                                ssim. Donec porttitora entum suscipit.</span>
+                    </div>                    
+                </div>
+                <div class="about-row-con col-12">
+                    <div class="connector"></div>
+                </div>
+                <div class="col-12 last">
+                    <span class="story">
+                        <p>OUR</p>
+                        <p>STORY</p>
+                        <p>CONTINUES</p>
+                        <p>...</p>
+                    </span>
+                </div>
+            </div>            
         </section>
 	</body>
 </html> 
