Section Team - finished

--- a/index.html
+++ b/index.html
@@ -169,14 +169,51 @@
                     <div class="connector"></div>
                 </div>
                 <div class="col-12 last">
-                    <span class="story">
+                    <div class="story">
                         <p>OUR</p>
                         <p>STORY</p>
                         <p>CONTINUES</p>
                         <p>...</p>
-                    </span>
+                    </div>
                 </div>
             </div>            
+        </section>
+        <section class="team">
+            <span class="team-h1">OUR AMAZING TEAM</span>
+            <span class="team-h2">Proin iaculis purus consequat sem cure.</span>
+            <div class="team-row">
+                <div class="team-column">
+                    <div class="team-img"></div>
+                    <span class="name">Kimberly Thompson</span>
+                    <span class="position">Marketer</span>
+                    <div class="social-media">
+                        <div class="social"><img src="icons/Twitter.svg"></div>
+                        <div class="social"><img src="icons/Facebook.svg"></div>
+                        <div class="social"><img src="icons/Pinterest.svg"></div>
+                    </div>
+                </div>
+                <div class="team-column">
+                    <div class="team-img"></div>
+                    <span class="name">Rico Massimo</span>
+                    <span class="position">Coder</span>
+                    <div class="social-media">
+                        <div class="social"><img src="icons/Twitter.svg"></div>
+                        <div class="social"><img src="icons/Facebook.svg"></div>
+                        <div class="social"><img src="icons/Google+.svg"></div>
+                    </div>
+                </div>
+                <div class="team-column">
+                    <div class="team-img"></div>
+                    <span class="name">Uku Mason</span>
+                    <span class="position">Graphic Designer</span>
+                    <div class="social-media">                        
+                        <div class="social"><img src="icons/Facebook.svg"></div>
+                        <div class="social"><img src="icons/Pinterest.svg"></div>
+                    </div>
+                </div>
+            </div>
+            <span class="team-desc">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  
+                    aenean rhoncus posuere odio in tincidunt proin iaculis.</span>
         </section>
 	</body>
 </html> 
