--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                     <span class="name">Kimberly Thompson</span>
                     <span class="position">Marketer</span>
                     <div class="social-media">
-                        <div class="social"><img src="icons/Twitter.svg"></div>
-                        <div class="social"><img src="icons/Facebook.svg"></div>
-                        <div class="social"><img src="icons/Pinterest.svg"></div>
+                        <div class="social"><img src="icons/Twitter.svg" alt="Twitter icon"></div>
+                        <div class="social"><img src="icons/Facebook.svg"  alt="Facebook icon"></div>
+                        <div class="social"><img src="icons/Pinterest.svg"  alt="Pinterest icon"></div>
                     </div>
                 </div>
                 <div class="team-column">
@@ -197,9 +197,9 @@
                     <span class="name">Rico Massimo</span>
                     <span class="position">Coder</span>
                     <div class="social-media">
-                        <div class="social"><img src="icons/Twitter.svg"></div>
-                        <div class="social"><img src="icons/Facebook.svg"></div>
-                        <div class="social"><img src="icons/Google+.svg"></div>
+                        <div class="social"><img src="icons/Twitter.svg"  alt="Twitter icon"></div>
+                        <div class="social"><img src="icons/Facebook.svg"  alt="Facebook icon"></div>
+                        <div class="social"><img src="icons/Google+.svg"  alt="Google+ icon"></div>
                     </div>
                 </div>
                 <div class="team-column">
@@ -207,13 +207,21 @@
                     <span class="name">Uku Mason</span>
                     <span class="position">Graphic Designer</span>
                     <div class="social-media">                        
-                        <div class="social"><img src="icons/Facebook.svg"></div>
-                        <div class="social"><img src="icons/Pinterest.svg"></div>
+                        <div class="social"><img src="icons/Facebook.svg"  alt="Facebook icon"></div>
+                        <div class="social"><img src="icons/Pinterest.svg"  alt="Pinterest icon"></div>
                     </div>
                 </div>
             </div>
             <span class="team-desc">Proin iaculis purus consequat sem cure  digni ssim donec porttitora entum suscipit  
                     aenean rhoncus posuere odio in tincidunt proin iaculis.</span>
+        </section>
+        <section class="sponsors">
+            <div class="sponsors-row col-10">
+                <img src="images/Envato.png" alt="Envato">
+                <img src="images/WordPress.png" alt="WordPress">
+                <img src="images/Tuts+.png" alt="ae tuts+">
+                <img src="images/Microlancer_copy.png" alt="microlancer">
+            </div>
         </section>
 	</body>
 </html> 
