Section Contact - finished

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-        <title>Landing page</title>        
-        <script src="https://kit.fontawesome.com/aafd3eee24.js"></script>
+        <title>Landing page</title>              
         <link rel="stylesheet" href="css/style.css">        
 	</head>
 	<body>
@@ -223,6 +222,21 @@
                 <img src="images/Microlancer_copy.png" alt="microlancer">
             </div>
         </section>
+        <section class="contact">
+            <span class="contact-h1">CONTACT US</span>
+            <span class="contact-h2">Proin iaculis purus consequat sem cure.</span>
+            <div class="contact-row">
+                <div class="contact-inputs">
+                    <input type="email" class="form-control"  placeholder=" YOUR NAME *">
+                    <input type="email" class="form-control"  placeholder=" YOUR EMAIL *">
+                    <input type="email" class="form-control"  placeholder=" SUBJECT">                    
+                </div>
+                <div class="contact-textfield">
+                        <textarea class="form-control" placeholder=" YOUR MESSAGE *"></textarea>
+                </div>
+            </div>
+            <span class="contact-button">SEND MESSAGE</span>
+        </section>                
 	</body>
 </html> 
 
