Section Footer - finished

--- a/index.html
+++ b/index.html
@@ -236,7 +236,16 @@
                 </div>
             </div>
             <span class="contact-button">SEND MESSAGE</span>
-        </section>                
+        </section>   
+        <section class="footer">
+            <div class="footer-left">&#169; Copyright 2014 FreebiesXpress.com</div>
+            <div class="footer-social">
+                <div class="social"><img src="icons/Twitter-w.png" alt="Twitter"></div>
+                <div class="social"><img src="icons/Facebook-w.png" alt="Facebook"></div>
+                <div class="social"><img src="icons/Pinterest-w.png" alt="Pinterest"></div>
+                <div class="social"><img src="icons/Google+-w.png" alt="Google+"></div>
+            </div>
+        </section>             
 	</body>
 </html> 
 
