Add @media to About us section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <span class="about-h1">ABOUT US</span>
             <span class="about-h2">Proin iaculis purus consequat sem cure.</span>
             <div class="about-container col-12">                
-                <div class="about-row col-12">
+                <div class="about-row col-12 reverse">
                     <div class="about-desc left">
                         <span class="desc-h1">JULY 2010</span>
                         <span class="desc-h1">Our Humble Beginnings</span>
@@ -133,7 +133,7 @@
                 <div class="about-row-con col-12">
                     <div class="connector"></div>
                 </div>
-                <div class="about-row col-12">
+                <div class="about-row col-12 reverse">
                     <div class="about-desc left">
                         <span class="desc-h1">DECEMBER 2012</span>
                         <span class="desc-h1">Enter The Dark Days</span>
