--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<section class="jumbotron col-12">
-            <div class="tint col-12"></div>            
-            <div class="jumbo-container col-12">
+            <!-- <div class="tint col-12"></div>             -->
+            <!-- <div class="jumbo-container col-12"> -->
                 <div class="header col-10">
                     <span class="logo">Golden</span>
                     <div class="menu">
@@ -22,7 +22,7 @@
                 <span class="welcome col-12">Welcome To Our Studio</span>
                 <span class="nice col-12">IT'S NICE TO MEET YOU</span>
                 <span class="jumbo-button">TELL ME MORE</span>
-            </div>            
+            <!-- </div>             -->
         </section>
         <section class="services">
             <span class="services-h1">SERVICES</span>
